# yolov8

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: bbox.rs  lib.rs  onnx.rs  tch.rs
testdata/: .gitignore
tests/: yolov8.rs
